--- a/solvers/main.Rmd
+++ b/solvers/main.Rmd
@@ -13,8 +13,9 @@ runtime: shiny
 library(shinyjs)
 library(ggrepel)
 library(plotly)
-library(purrr)
-library(stringr)
+library(gtools)
+library(tidyverse)
+library(glue)
 source("globals.R")
 load("data/results_3_36_200_1to20_3030.rda")
 knitr::opts_chunk$set(echo = FALSE)
